--- a/app-agenda/src/index.html
+++ b/app-agenda/src/index.html
@@ -12,24 +12,25 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
-  <body>
+  <body class="fundo">
 
   <app-root></app-root>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"  crossorigin="anonymous"></script>
   <script  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"  crossorigin="anonymous"></script>
-  <script  src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"  crossorigin="anonymous"></script>
-<!-- jQuery Library -->
- <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
- <!--materialize js-->
- <script type="text/javascript" src="js/materialize.js"></script>
- <!--prism-->
- <script type="text/javascript" src="js/prism.js"></script>
- <!--scrollbar-->
- <script type="text/javascript" src="js/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 
- <!--plugins.js - Some Specific JS codes for Plugin Settings-->
- <script type="text/javascript" src="js/plugins.js"></script>
+<!-- jQuery Library -->
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+ <!--materialize js-->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+ <!-- efetua controle menu principal -->
+ <script>
+  $(document).ready(function(){
+  $('.sidenav').sidenav();
+ });
+</script>
+
 </body>
 </html>
